feat: update data

--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
                 <h2>Tomasz Ostaszewski</h2>
             </div>
             <div class="personal">
-                <p id="pers">
-                    <ul>
-                        <li><i class="fas fa-location-arrow"></i> Warsaw, Poland</li>
-                        <li><i class="fas fa-phone"></i> +48 500 238 393</li>
-                        <li><i class="fas fa-envelope"></i> t.ostaszewski89@gmail.com</li>
-                    </ul>
-                </p>
+                <h2 id="pers">Contact</h2>
+            <ul>
+                <li><i class="fas fa-location-arrow"></i> Warsaw, Poland</li>
+                <li><i class="fas fa-phone"></i> +48 500 238 393</li>
+                <li><i class="fas fa-envelope"></i> t.ostaszewski89@gmail.com</li>
+            </ul>
                 <hr>
             </div>
             <div class="skills">
