feat: update data

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <title>CV - HTML & CSS</title>
 </head>
 <body>
@@ -42,15 +42,15 @@
         </section>
         <section class="right">
             <table>
-                <tr>
-                    <th><a href="#pers">CONTACT</a></th>
-                        <th><a href="#skills">SKILLS</a></th>
-                            <th><a href="#languages">LANGUAGES</a></th>
-                                <th><a href="#aboutme">ABOUT ME</a></th>
-                                    <th><a href="#experience">EXPERIENCE</a></th>
-                                        <th><a href="#education">EDUCATION</a></th>
-                                            <th><a href="#codeexample">CODE EXAMPLE</a></th>
-                </tr>
+                <tbody>
+                    <th><a href="#pers" scope="col">CONTACT</a></th>
+                        <th><a href="#skills" scope="col">SKILLS</a></th>
+                            <th><a href="#languages" scope="col">LANGUAGES</a></th>
+                                <th><a href="#aboutme" scope="col">ABOUT ME</a></th>
+                                    <th><a href="#experience" scope="col">EXPERIENCE</a></th>
+                                        <th><a href="#education" scope="col">EDUCATION</a></th>
+                                            <th><a href="#codeexample" scope="col">CODE EXAMPLE</a></th>
+                </tbody>
             </table>
             <div class="aboutme">
                 <hr>
