feat: update data

--- a/index.html
+++ b/index.html
@@ -41,17 +41,15 @@
             </div>
         </section>
         <section class="right">
-            <table>
-                <tbody>
-                    <th><a href="#pers" scope="col">CONTACT</a></th>
-                        <th><a href="#skills" scope="col">SKILLS</a></th>
-                            <th><a href="#languages" scope="col">LANGUAGES</a></th>
-                                <th><a href="#aboutme" scope="col">ABOUT ME</a></th>
-                                    <th><a href="#experience" scope="col">EXPERIENCE</a></th>
-                                        <th><a href="#education" scope="col">EDUCATION</a></th>
-                                            <th><a href="#codeexample" scope="col">CODE EXAMPLE</a></th>
-                </tbody>
-            </table>
+            <ul>
+                <li><a href="#pers">CONTACT</a></li>
+                <li><a href="#skills">SKILLS</a></li>
+                <li><a href="#languages">LANGUAGES</a></li>
+                <li><a href="#aboutme">ABOUT ME</a></li>
+                <li><a href="#experience">EXPERIENCE</a></li>
+                <li><a href="#education">EDUCATION</a></li>
+                <li><a href="#codeexample">CODE EXAMPLE</a></li>
+            </ul>
             <div class="aboutme">
                 <hr>
                 <h1 id="aboutme"><i class="fas fa-hand-peace"></i>About me</h1>
