--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer">
-    <title>CV - HTML & CSS</title>
+    <title>CV Tomasz Ostaszewski</title>
 </head>
 <body>
     <main>
@@ -36,7 +36,7 @@
                 <li> <p>Polish</p> <progress max="100" value="100"></progress></li>
                 <li> <p>English</p> <progress max="100" value="70"></progress></li>
         		<li> <p>German</p> <progress max="100" value="40"></progress></li>
-                <li> <p>Russian</p> <progress max="100" value="30"></progress></li> 
+                <li> <p>Russian</p> <progress max="100" value="30"></progress></li>
             </ul>
             </div>
         </section>
@@ -86,7 +86,7 @@
         </section>
     </main>
     <footer>
-        <p><a href="https://github.com/TOstaszewski"><img src="GitHub.png" alt="GitHub logo"></a><a href=https://rs.school/js-en><img src="rsschool.jpg" alt="RSSchool logo"></a></p>
+        <p><a href="https://github.com/TOstaszewski"><img src="GitHub.png" alt="GitHub logo"></a><a href="https://rs.school/js-en"><img src="rsschool.jpg" alt="RSSchool logo"></a></p>
             <p>Tomasz Ostaszewski</p>
             <p>October 2022</p>
     </footer>
