--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <hr>
             </div>
             <div class="skills">
-                <h3 id="skills"><i class="fas fa-cog"></i> Skills</h3>
+                <h3 id="sk"><i class="fas fa-cog"></i> Skills</h3>
         	<ul>
                 <li> <p>Piano and Accordion playing</p> <progress max="100" value="100"></progress></li>
                 <li> <p>VS Code</p> <progress max="100" value="60"></progress></li>
@@ -31,7 +31,7 @@
             </ul>
             </div>
             <div class="languages">
-                <h4 id="languages"><i class="fas fa-globe"></i> Languages</h4>
+                <h4 id="lang"><i class="fas fa-globe"></i> Languages</h4>
         	<ul>
                 <li> <p>Polish</p> <progress max="100" value="100"></progress></li>
                 <li> <p>English</p> <progress max="100" value="70"></progress></li>
@@ -41,34 +41,35 @@
             </div>
         </section>
         <section class="right">
+            <nav class="navigator">
             <ul>
                 <li><a href="#pers">CONTACT</a></li>
-                <li><a href="#skills">SKILLS</a></li>
-                <li><a href="#languages">LANGUAGES</a></li>
-                <li><a href="#aboutme">ABOUT ME</a></li>
-                <li><a href="#experience">EXPERIENCE</a></li>
-                <li><a href="#education">EDUCATION</a></li>
-                <li><a href="#codeexample">CODE EXAMPLE</a></li>
+                <li><a href="#sk">SKILLS</a></li>
+                <li><a href="#lang">LANGUAGES</a></li>
+                <li><a href="#me">ABOUT ME</a></li>
+                <li><a href="#exper">EXPERIENCE</a></li>
+                <li><a href="#edu">EDUCATION</a></li>
+                <li><a href="#code">CODE EXAMPLE</a></li>
             </ul>
+            </nav>
             <div class="aboutme">
                 <hr>
-                <h1 id="aboutme"><i class="fas fa-hand-peace"></i>About me</h1>
-                <ul>
-                    <li>I’m a musician and accordion teacher at the National Music School in Poland. I like new challenges, that’s why I decided to learn something new.</li>
-                </ul>
+                <h1 id="me"><i class="fas fa-hand-peace"></i>About me</h1>
+                <p>I’m a musician and accordion teacher at the National Music School in Poland. I like new challenges, that’s why I decided to learn something new.</li>
+                </p>
                 <hr>
             </div>
             <div class="experience">
-                <h1 id="experience"><i class="fas fa-briefcase"></i>Experience</h1>
+                <h1 id="exper"><i class="fas fa-briefcase"></i>Experience</h1>
                 <ul>
-                    <li><p>National Music Schools in Poland - teacher (since 2014 - present)</p></li>
+                    <li><p>National Music School in Zyrardow - teacher (since 2014 - present)</p></li>
                     <li><p>Centre of Culture and Arts in Foshan (China) - teacher (2019-2022)</p></li>
                     <li><p>National Philharmonic in Warsaw - musician (2018-2019)</p></li>
                 </ul>
                 <hr>
             </div>
             <div class="education">
-                <h1 id="education"><i class="fas fa-building-columns"></i>Education</h1>
+                <h1 id="edu"><i class="fas fa-building-columns"></i>Education</h1>
                 <ul>
                     <li><p>The Rolling Scopes School (2022)</p></li>
                     <li><p>The Chopin University of Music in Warsaw (Poland, 2013)</p></li>
@@ -76,11 +77,13 @@
                 <hr>
             </div>
             <div class="codeexample">
-                <h1 id="codeexample"><i class="fas fa-code"></i>Code example</h1>
-                <ul>
-                    <li>// the hello world program</li>
-                    <li>console.log('Hello World!');</li>
-                </ul>
+                <h1 id="code"><i class="fas fa-code"></i>Code example</h1>
+                <pre>
+                    <code>
+                        // the hello world program<br>
+                        console.log('Hello World!');
+                    </code>
+                </pre>
                 <hr>
             </div>
         </section>
